--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,17 +4,14 @@ jobs:
 
   build:
     name: Build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        go_version: [1.12]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ubuntu-latest
+    
     steps:
 
-    - name: Set up Go ${{ matrix.go_version }}
+    - name: Set up Go 1.12
       uses: actions/setup-go@v1
       with:
-        go-version: ${{ matrix.go_version }}
+        go-version: 1.12
       id: go
 
     - name: Check out code into the Go module directory
@@ -23,10 +20,12 @@ jobs:
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
 
-    - name: Build
+    - name: Build Linux
       run: go build -v .
+      
+    - name: Build MacOS
+      run: env GOOS=darwin go build -v .
+      
+    - name: Build Windows
+      run: env GOOS=windows go build -v .
